new files added g

--- a/contact.html
+++ b/contact.html
@@ -261,6 +261,19 @@
                 display: none;
             }
         }
+
+        /* Footer */
+        .footer {
+            background: var(--white);
+            padding: 1rem;
+            text-align: center;
+            margin-top: 2rem;
+        }
+
+        .footer-content {
+            max-width: 1200px;
+            margin: 0 auto;
+        }
     </style>
 </head>
 <body>
@@ -274,7 +287,7 @@
             <a href="index.html">Home</a>
             <a href="index.html#features">Features</a>
             <a href="learn-more.html">Learn More</a>
-            <a href="index.html#about">About Us</a>
+            <a href="about.html">About Us</a>
             <a href="contact.html">Contact</a>
         </div>
     </nav>
@@ -348,6 +361,13 @@
             </div>
         </div>
     </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-content">
+            <p>&copy; 2024 FarmCS. Made with ❤️ in India</p>
+        </div>
+    </footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
